# ha-kospel-cmi

./: .env  .gitignore  INSTALLATION.md  README.md  hacs.json  logging_config.py  main.py  pyproject.toml
.cursor/rules/: architecture.mdc  coding_standards.mdc  file_changes.mdc  running_python.mdc  system_context.mdc  testing.mdc
custom_components/kospel/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  water_heater.py
custom_components/kospel/controller/: api.py  registry.py
custom_components/kospel/kospel/: simulator.py
custom_components/kospel/translations/: pl.json
data/: simulation_state.yaml
docs/: PUBLISHING.md  advanced-usage.md  architecture.md  architecture.mermaid  status.md  technical.md
docs/test_campaign/: README.md
docs/test_campaign/initial_states/: state_all_running.yaml  state_baseline.yaml  state_minimal.yaml  state_off.yaml  state_summer.yaml  state_winter_all_features.yaml
docs/test_campaign/results/: .gitkeep
docs/test_campaign/templates/: bug_report_template.md  test_result_template.md  test_session_log.md
docs/test_campaign/test_procedures/: cleanup_procedures.md  environment_setup.md  execution_checklist.md
docs/test_campaign/test_scenarios/: TC001_integration_setup.md  TC002_climate_entity.md  TC002_climate_entity_v2.md  TC002_climate_entity_v3.md  TC003_sensor_entities.md  TC004_switch_entities.md  TC005_simulator.md
scripts/: check_registers.py
tests/: __init__.py  conftest.py  test_climate_entity.py  test_config_flow.py  test_kospel_library_contract.py  test_number_entity.py  test_select_entity.py  test_sensor_entity.py  test_water_heater_entity.py
tests/controller/: __init__.py  test_api.py
tests/integration/: __init__.py  test_api_communication.py  test_mock_mode.py  test_water_heater_registers.py
tests/kospel/: __init__.py  test_api.py  test_simulator.py
tests/registers/: __init__.py  test_decoders.py  test_encoders.py  test_utils.py
