[project]
name = "ha-kospel-cmi"
version = "0.1.0a1"
description = "Home Assistant integration to manage Kospel Electric Heaters"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE*"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "kospel-cmi-lib==0.1.0a4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
keywords = ["kospel", "heater", "cmi", "home-assistant", "hacs", "iot", "async"]
urls = { Repository = "https://github.com/JanKrl/ha-kospel-cmi" }


[dependency-groups]
dev = [
    "pyaml>=25.7.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "scripts/*",
    "*/__pycache__/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 0
